fix label alignment in sdpi.css

--- a/fail.marc.onairclock.sdPlugin/propertyinspector/css/sdpi.css
+++ b/fail.marc.onairclock.sdPlugin/propertyinspector/css/sdpi.css
@@ -276,7 +276,7 @@ option {
 }
 
 .sdpi-item > *:not(.sdpi-item-label.empty):not(meter) {
-  min-height: 26px;
+  /* min-height: 26px; */
   padding: 0px 4px 0px 4px;
 }
 
